unpackaged/main/default/objects/NBA_Rule_Set__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Used to indicate a common language overview of the rule.</description>
    <inlineHelpText>Used to indicate a common language overview of the rule.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>