unpackaged/main/default/objects/NBA_Rule_Set__c/fields/Hold_Out_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Hold_Out_Percentage__c</fullName>
    <description>Field indicates the percentage of records for a rule that will not be served up and will be marked as a hold out record for experimentation purposes.</description>
    <inlineHelpText>Field indicates the percentage of records for a rule that will not be served up and will be marked as a hold out record for experimentation purposes.</inlineHelpText>
    <label>Hold Out Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>