unpackaged/main/default/objects/NBA_Rule_Set__c/fields/Last_Ran_With_Zero_Records__c.field-meta.xml
<CustomField>
    <fullName>Last_Ran_With_Zero_Records__c</fullName>
    <description>This indicates the date/time the rule last returned zero records. This is used in the Rule Frequency Minutes evaluation.</description>
    <inlineHelpText>This indicates the date/time the rule last returned zero records. This is used in the Rule Frequency Minutes evaluation.</inlineHelpText>
    <label>Last Ran With Zero Records</label>
    <type>DateTime</type>
</CustomField>