unpackaged/main/default/objects/NBA_Rule_Set__c/fields/Last_Refreshed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Refreshed_Date__c</fullName>
    <description>Date and time when user clicked view record count to get count of leads and opportunities.</description>
    <label>Last Refreshed Date</label>
    <type>DateTime</type>
</CustomField>