unpackaged/main/default/objects/NBA_Rule_Set__c/fields/NBA_Rule_Set_Configuration__c.field-meta.xml
<CustomField>
    <fullName>NBA_Rule_Set_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NBA Rule Set Configuration</label>
    <referenceTo>NBA_Rule_Set_Configuration__c</referenceTo>
    <relationshipLabel>NBA Rule Sets</relationshipLabel>
    <relationshipName>NBA_Rule_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>