unpackaged/main/default/objects/NBA_Rule_Set__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Priority determines the sort order of the rules within a rule set. This will determine which rules come first, second, etc. when serving up records and displaying applicable NBA rules on records.</description>
    <inlineHelpText>Priority determines the sort order of the rules within a rule set. This will determine which rules come first, second, etc. when serving up records and displaying applicable NBA rules on records.</inlineHelpText>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>