unpackaged/main/default/objects/NBA_Rule_Set__c/fields/Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Record_Count__c</fullName>
    <description>Count of the records available for each object within a rule</description>
    <label>Record Count</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>