unpackaged/main/default/objects/NBA_Rule_Set__c/fields/Rule_Frequency_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Rule_Frequency_Minutes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>When the rule returns zero records, the rule will be evaluated again based on the minutes chosen in this Rule Frequency Minutes field. For example, if zero results is returned at 10:00 am and Rule Frequency Minutes is 5 minutes, the next time the query will evaluate the rule is 10:06 am to serve records, if any. If Rule Frequency Minutes is 0 minutes, the rule will always be evaluated when serving records.</description>
    <inlineHelpText>When the rule returns zero records, the rule will be evaluated again based on the minutes chosen in this Rule Frequency Minutes field. For example, if zero results is returned at 10:00 am and Rule Frequency Minutes is 5 minutes, the next time the query will evaluate the rule is 10:06 am to serve records, if any. If Rule Frequency Minutes is 0 minutes, the rule will always be evaluated when serving records.</inlineHelpText>
    <label>Rule Frequency Minutes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>