unpackaged/main/default/objects/NBA_Rule_Set__c/fields/Rule_Last_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Rule_Last_Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the user who updated the criteria or rule attributes. This field is not updated for Record Refresh or when serving a record updates the Last Ran with Zero Records field.</description>
    <inlineHelpText>Indicates the user who updated the criteria or rule attributes. This field is not updated for Record Refresh or when serving a record updates the Last Ran with Zero Records field.</inlineHelpText>
    <label>Rule Last Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NBA_Rule_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>