unpackaged/main/default/objects/NBA_Rule_Set__c/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <description>NBA Rule Name within a Rule Set. Rule Name will be displayed on the record served up or opened.</description>
    <inlineHelpText>NBA Rule Name within a Rule Set. Rule Name will be displayed on the record served up or opened.</inlineHelpText>
    <label>Rule Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>