unpackaged/main/default/objects/NBA_Rule_Set__c/fields/Rule_Skills_Criteria_Logic__c.field-meta.xml
<CustomField>
    <fullName>Rule_Skills_Criteria_Logic__c</fullName>
    <description>this holds all the criteria logic for the rule set skills</description>
    <inlineHelpText>this holds all the criteria logic for the rule set skills</inlineHelpText>
    <label>Rule Skills Criteria Logic</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>