unpackaged/main/default/objects/NBA_Rule_Set__c/fields/User_Last_Ran_With_Zero_Records__c.field-meta.xml
<CustomField>
    <fullName>User_Last_Ran_With_Zero_Records__c</fullName>
    <description>Indicates the date/time each user didn&apos;t get any records for a particular rule</description>
    <label>User Last Ran With Zero Records</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>