unpackaged/main/default/objects/NBA_Rule_Set__c/fields/Weighting__c.field-meta.xml
<CustomField>
    <fullName>Weighting__c</fullName>
    <description>Weighting from 0-100 for the rule. Currently not used but may be used in the future for weighting with prioritization to determine which records are served up in order.</description>
    <inlineHelpText>Weighting from 0-100 for the rule. Currently not used but may be used in the future for weighting with prioritization to determine which records are served up in order.</inlineHelpText>
    <label>Weighting</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>