unpackaged/main/default/objects/NBA_Rule_Set__c/validationRules/Rule_name_cannot_contain_special_charact.validationRule-meta.xml
<ValidationRule>
    <fullName>Rule_name_cannot_contain_special_charact</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(Rule_Name__c,&quot;-&quot;)</errorConditionFormula>
    <errorDisplayField>Rule_Name__c</errorDisplayField>
    <errorMessage>Please remove dashes from the Rule Name to save.</errorMessage>
</ValidationRule>